--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <section class="background-index">
         <section class="heading-index center-horizontal">
-            <h3 class="h3-index">Portfolio</h3>
+            <h3 class="h3-index">Hi! I'm Oliver. This is my Portfolio</h3>
         </section>
 
         <div id="app" class="container">
