Ocean one project added

--- a/zealand.html
+++ b/zealand.html
@@ -44,6 +44,26 @@
         </div>
     </nav>
 
+    <section class="container-snap section-nemskat-text section-oceanone">
+        <div class="left">
+            <h2 class="h2-zealand">3D Product Showcase</h2>
+            <h1 class="h1-oceanone">OCEAN ONE</span></h1>
+            <p class="p-role"><strong>My Role:</strong><i> Design & Programming</i><br></p>
+            <p class="p-zealand p-nemskat">
+                In collaboration with my fellow student Nicolai, we created a 3D product showcase of the product OCEAN ONE. We worked with Blender, NextJS & ThreeJS to create our vision. <br>
+                The goal was to create a visually appealing and interactive experience for the user.
+            </p>
+            <div class="grid-container">
+                <div class="grid-box">
+                    <a class="btn btn-oceanone-web" href="https://oceanone.vercel.app/" target="_blank">WEBSITE
+                        <img class="icon-index" src="img/btn-icons/white-web.png" alt="Website Icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <img class="fjordkroen-visual oceanone-visual" src="img/oceanone-visual.png" alt="Buddys photoshop showcase"> 
+    </section>
+
     <section class="container-snap section-nemskat-text section-buddys">
         <div class="left">
             <h2 class="h2-zealand">Communication App</h2>
