fixed footer and minor issues

--- a/zealand.html
+++ b/zealand.html
@@ -151,11 +151,10 @@
     </section>
 
     <footer class="container-snap">
-        <a class="email-link" href ="mailto:ollikp@gmail.com">ollikp@gmail.com</a>
+        <a class="email-link" href ="mailto:ollikp@gmail.com">oliverpervingjob@gmail.com</a>
         <div class="some-section">
-            <a href="https://www.instagram.com/oliverperving/" target="_blank"><img class="some-icons" src="img/icon-instagram.webp" alt="Instagram Logo"></a>
             <a href="https://www.linkedin.com/in/oliver-krumb%C3%A6k-perving-4b3ab521b/" target="_blank"><img class="some-icons" src="img/icon-linkedin.webp" alt="Linkedin Logo"></a>
-            <a href="https://www.youtube.com/channel/UCio9J18IBRcBxa58PAi856g" target="_blank"><img class="some-icons" src="img/icon-youtube.webp" alt="YouTube Logo"></a>
+            <a href="https://www.github.com/ollikp" target="_blank"><img class="some-icons" src="img/icon-github.svg" alt="Github Logo"></a>
         </div>
     </footer>
     <script src="js/main.js"></script>
